<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.politechnika.astroweather.display.SettingsActivity">

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude" />

    <EditText
        android:id="@+id/latitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <EditText
        android:id="@+id/longitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" />

    <TextView
        android:id="@+id/refreshTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refreshTime" />

    <EditText
        android:id="@+id/refreshTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789"
        android:text="0" />

    <TextView
        android:id="@+id/textView2"
        android:padding="4dp"
        android:textSize="11dp"
        android:layout_marginTop="20dp"
        android:background="#eee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Uwaga.
Dodatnia wartość szerokości geograficznej oznacza szerokość N;
Ujemna wartość szerokości geograficznej oznacza szerokość S;
Dodatnia wartość długości geograficznej oznacza szerokość E;
Ujemna wartość długości geograficznej oznacza szerokość W;" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ccc"
        android:onClick="save"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#888"
        android:onClick="cancel"
        android:text="@string/cancel" />
</LinearLayout>
